// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ON_CLICK: DOES dispatch if onClick returns true 1`] = `
<a
  href="/first"
  onClick={[Function]}
/>
`;

exports[`ON_CLICK: DOES dispatch if onClick returns undefined 1`] = `
<a
  href="/first"
  onClick={[Function]}
/>
`;

exports[`ON_CLICK: dispatches location-aware action 1`] = `
<a
  href="/first"
  onClick={[Function]}
>
  CLICK ME
</a>
`;

exports[`ON_CLICK: dispatches redirect if redirect === true 1`] = `
<a
  href="/first"
  onClick={[Function]}
>
  CLICK ME
</a>
`;

exports[`ON_CLICK: does NOT dispatch if onClick returns false 1`] = `
<a
  href="/first"
  onClick={[Function]}
/>
`;

exports[`ON_CLICK: does NOT dispatch if shouldDispatch === false 1`] = `
<a
  href="/first"
  onClick={[Function]}
/>
`;

exports[`ON_MOUSE_DOWN: dispatches action onMouseDown if down === true 1`] = `
<a
  href="/first"
  onClick={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
/>
`;

exports[`ON_TOUCH_START: dispatches action onTouchStart if down === true 1`] = `
<a
  href="/first"
  onClick={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
/>
`;

exports[`converts href as action object to path 1`] = `
<a
  href="/second/bar"
  onClick={[Function]}
/>
`;

exports[`converts href as array of strings to path 1`] = `
<a
  href="/second/bar"
  onClick={[Function]}
/>
`;

exports[`converts href as non-matched action object to "#" for path 1`] = `
<a
  href="#"
  onClick={[Function]}
/>
`;

exports[`converts invalid href to "#" for path 1`] = `
<a
  href="#"
  onClick={[Function]}
/>
`;

exports[`supports custom HTML tag name 1`] = `
<div
  onClick={[Function]}
/>
`;

exports[`supports custom HTML tag name which is still a link 1`] = `
<a
  href="somewhere"
  onClick={[Function]}
/>
`;
